force-app/main/default/objects/Mortgage_Details__c/Mortgage_Details__c.object-meta.xml
<CustomObject>
    <description>Account details on Financial Accounts with the &quot;Mortgage&quot; record type</description>
    <label>Mortgage Details</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Mortgage Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mortgage Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>