force-app/main/default/objects/Mortgage_Details__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <referenceTo>Financial_Accounts__c</referenceTo>
    <relationshipLabel>Mortgage Details</relationshipLabel>
    <relationshipName>Mortgage_Servicing</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>