force-app/main/default/objects/Mortgage_Details__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>