force-app/main/default/objects/Mortgage_Details__c/fields/Acct_Nbr_Ref_Txt__c.field-meta.xml
<CustomField>
    <fullName>Acct_Nbr_Ref_Txt__c</fullName>
    <description>External ID lookup to Financial Accounts</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Acct Nbr Ref Txt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>