force-app/main/default/objects/Mortgage_Details__c/fields/Current_LTV__c.field-meta.xml
<CustomField>
    <fullName>Current_LTV__c</fullName>
    <label>Current LTV</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>