force-app/main/default/objects/Mortgage_Details__c/fields/Current_Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Officer_Name__c</fullName>
    <formula>Account_Name__r.Current_Officer_Name__r.User_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Officer Name</label>
    <type>Text</type>
</CustomField>