force-app/main/default/objects/Mortgage_Details__c/fields/Current_Principle_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Principle_Balance__c</fullName>
    <formula>Account_Name__r.Current_Principle_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Principle Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>