force-app/main/default/objects/Mortgage_Details__c/fields/Date_Payoff_Run__c.field-meta.xml
<CustomField>
    <fullName>Date_Payoff_Run__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Payoff Run</label>
    <type>Date</type>
</CustomField>