force-app/main/default/objects/Mortgage_Details__c/fields/Employee_Account__c.field-meta.xml
<CustomField>
    <fullName>Employee_Account__c</fullName>
    <formula>Account_Name__r.Restricted_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Account</label>
    <type>Checkbox</type>
</CustomField>