force-app/main/default/objects/Mortgage_Details__c/fields/Escrow_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Payment_Amount__c</fullName>
    <label>Escrow Payment Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>