force-app/main/default/objects/Mortgage_Details__c/fields/First_Rate_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Rate_Change_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Rate Change Date</label>
    <type>Date</type>
</CustomField>