force-app/main/default/objects/Mortgage_Details__c/fields/Index_Cd__c.field-meta.xml
<CustomField>
    <fullName>Index_Cd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Index Cd</label>
    <length>5</length>
    <type>Text</type>
</CustomField>