force-app/main/default/objects/Mortgage_Details__c/fields/Index_Date_to_Use__c.field-meta.xml
<CustomField>
    <fullName>Index_Date_to_Use__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Index Date to Use</label>
    <type>Date</type>
</CustomField>