force-app/main/default/objects/Mortgage_Details__c/fields/Index_Description__c.field-meta.xml
<CustomField>
    <fullName>Index_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Index Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>