force-app/main/default/objects/Mortgage_Details__c/fields/Index_Value__c.field-meta.xml
<CustomField>
    <fullName>Index_Value__c</fullName>
    <label>Index Value</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>