force-app/main/default/objects/Mortgage_Details__c/fields/Int_Method_Desc__c.field-meta.xml
<CustomField>
    <fullName>Int_Method_Desc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Int Method Desc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>