force-app/main/default/objects/Mortgage_Details__c/fields/Late_Mortgage_Payment__c.field-meta.xml
<CustomField>
    <fullName>Late_Mortgage_Payment__c</fullName>
    <label>Late Mortgage Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>