force-app/main/default/objects/Mortgage_Details__c/fields/Late_Mortgage_Payment_Count__c.field-meta.xml
<CustomField>
    <fullName>Late_Mortgage_Payment_Count__c</fullName>
    <label>Late Mortgage Payment Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>