force-app/main/default/objects/Mortgage_Details__c/fields/Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>