force-app/main/default/objects/Mortgage_Details__c/fields/Lkback_Period_Code__c.field-meta.xml
<CustomField>
    <fullName>Lkback_Period_Code__c</fullName>
    <label>Lkback Period Code</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>