force-app/main/default/objects/Mortgage_Details__c/fields/Loan_Type_Cd__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type_Cd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan Type Cd</label>
    <length>50</length>
    <type>Text</type>
</CustomField>