force-app/main/default/objects/Mortgage_Details__c/fields/Loan_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>