force-app/main/default/objects/Mortgage_Details__c/fields/Lttr_Ld_Day_Count__c.field-meta.xml
<CustomField>
    <fullName>Lttr_Ld_Day_Count__c</fullName>
    <label>Lttr Ld Day Count</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>