force-app/main/default/objects/Mortgage_Details__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Margin</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>