force-app/main/default/objects/Mortgage_Details__c/fields/Mortgage_Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Insurance_Amount__c</fullName>
    <label>Mortgage Insurance Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>