force-app/main/default/objects/Mortgage_Details__c/fields/Mortgage_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Insurance_Company__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mortgage Insurance Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>