force-app/main/default/objects/Mortgage_Details__c/fields/Next_P_I_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_P_I_Change_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next P&amp;I Change Date</label>
    <type>Date</type>
</CustomField>