force-app/main/default/objects/Mortgage_Details__c/fields/NMLS_Number__c.field-meta.xml
<CustomField>
    <fullName>NMLS_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Officer NMLS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>