force-app/main/default/objects/Mortgage_Details__c/fields/of_Days_Until_Rate_Resets__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Until_Rate_Resets__c</fullName>
    <formula>Interest_Rate_Adjustment_Date__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days Until Rate Resets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>