force-app/main/default/objects/Mortgage_Details__c/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <formula>Account_Name__r.Open_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>