force-app/main/default/objects/Mortgage_Details__c/fields/Original_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Loan_Amount__c</fullName>
    <label>Original Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>