force-app/main/default/objects/Mortgage_Details__c/fields/Original_Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>Original_Loan_Officer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Loan Officer #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>