force-app/main/default/objects/Mortgage_Details__c/fields/Original_LTV__c.field-meta.xml
<CustomField>
    <fullName>Original_LTV__c</fullName>
    <label>Original LTV</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>