force-app/main/default/objects/Mortgage_Details__c/fields/Original_Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Officer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Officer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>