force-app/main/default/objects/Mortgage_Details__c/fields/Original_Term__c.field-meta.xml
<CustomField>
    <fullName>Original_Term__c</fullName>
    <label>Original Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>