force-app/main/default/objects/Mortgage_Details__c/fields/P_I_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>P_I_Payment_Amount__c</fullName>
    <label>P&amp;I Payment Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>