force-app/main/default/objects/Mortgage_Details__c/fields/Payoff_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Request_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payoff Request Date</label>
    <type>Date</type>
</CustomField>