force-app/main/default/objects/Mortgage_Details__c/fields/Payoff_Requestor_Info__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Requestor_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payoff Requestor Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>