force-app/main/default/objects/Mortgage_Details__c/fields/Payoff_Requestor_name__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Requestor_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payoff Requestor name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>