force-app/main/default/objects/Mortgage_Details__c/fields/Previous_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Loan_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Loan Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>