force-app/main/default/objects/Mortgage_Details__c/fields/Primary_Borrower_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Borrower_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Borrower Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>