force-app/main/default/objects/Mortgage_Details__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>