force-app/main/default/objects/Mortgage_Details__c/fields/Property_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Zip Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>