force-app/main/default/objects/Mortgage_Details__c/fields/Rate_Change_Frequency_Cd__c.field-meta.xml
<CustomField>
    <fullName>Rate_Change_Frequency_Cd__c</fullName>
    <label>Rate Change Frequency Cd</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>